# nhl-actuary

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: commands  hooks.json  skills
.specify/memory/: constitution.md
.specify/specs/nhl-playoff-bracket/: plan.md  spec.md  tasks.md
src/nhl_actuary/: __init__.py  api.py  main.py  models.py  predictor.py  renderer.py  seeding.py
templates/: bracket.html
tests/: test_placeholder.py  test_predictor.py
